--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "@nuxtjs/vuetify": "0.5.5",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/vuetify": "0.5.5",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "firebase-tools": "^7.0.2",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
