--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,54 @@
-version: 2
-jobs:
-  deploy_dev:
+version: 2.1
+
+executors:
+  default:
+    working_directory: ~/repo
     docker:
       - image: circleci/node:10
+        environment:
+          TZ: Asia/Tokyo
+
+
+commands:
+  restore_npm:
+    steps:
+      - restore_cache:
+          name: Restore npm dependencies
+          key: npm-v1-{{ checksum "package-lock.json" }}
+  save_npm:
+    steps:
+      - save_cache:
+          name: Cache npm dependencies
+          key: npm-v1-{{ checksum "package-lock.json" }}
+          paths:
+            - ~/repo/node_modules
+
+jobs:
+  setup:
+    executor:
+      name: default
+
     steps:
       - checkout
+      - restore_npm
       - run:
-          name: npm install
-          command: npm install
-      - run:
-          name: build
-          command: npm run build
-      - run:
-          name: generate
-          command: npm run generate
-      - run:
-          name: deploy
-          command: ./node_modules/.bin/firebase deploy --token=$FIREBAASE_TOKEN
-
+          name: Install npm dependencies
+          command: npm ci
+      - save_npm
+      lint:
+        executor:
+          name: default
+        steps:
+          - checkout
+          - restore_npm
+          - run 
+              name: Run lint
+              command: npm run lint
+              
 workflows:
-  version: 2
-  deploy_dev:
+  linting:
     jobs:
-      - deploy_dev:
-          filters:
-            branches:
-              only: develop
+      - setup
+      - lint:
+        requires:
 
