--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,12 @@ commands:
     steps:
       - restore_cache:
           name: Restore npm dependencies
-          key: npm-v1-{{ checksum "package-lock.json" }}
+          key: npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
   save_npm:
     steps:
       - save_cache:
           name: Cache npm dependencies
-          key: npm-v1-{{ checksum "package-lock.json" }}
+          key: npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
           paths:
             - ~/repo/node_modules
 
@@ -61,7 +61,7 @@ jobs:
           command: npm run generate
       - run:
           name: deploy
-          command: ./functions/node_modules/.bin/firebase deploy --only hosting --token=$FIREBASE_TOKEN
+          command: ./node_modules/.bin/firebase deploy --only hosting --token=$FIREBASE_TOKEN
 
   function_deploy:
     executor:
@@ -71,7 +71,7 @@ jobs:
       - restore_npm
       - run:
           name: deploy
-          command: ./node_modules/.bin/firebase deploy --only functions --token=$FIREBASE_TOKEN
+          command: ./functions/node_modules/.bin/firebase deploy --only functions --token=$FIREBASE_TOKEN
 
 workflows:
   hosting-deploy:
