--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ commands:
           key: npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
           paths:
             - ~/repo/node_modules
+            - ~/repo/functions/node_modules
 
 jobs:
   setup:
