ciファイルの修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,6 @@ jobs:
       - run:
           name: Install npm
           command: cd functions && npm install
-      - run:
-          name: install firebase-tools
-          command: npm install -D firebase-tools
       - save_npm
   lint:
     executor:
@@ -75,7 +72,7 @@ jobs:
           command: ./functions/node_modules/.bin/firebase deploy --only functions --token=$FIREBASE_TOKEN
 
 workflows:
-  hosting-deploy:
+  build-deploy:
     jobs:
       - setup
       - lint:
@@ -87,13 +84,6 @@ workflows:
           # filters:
           #   branches:
           #     only: master
-
-  function-deploy:
-    jobs:
-      - setup
-      - lint:
-          requires:
-            - setup
       - function_deploy:
           requires:
             - lint
