--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "firebase-functions": "^3.0.0",
+    "firebase-tools": "^7.0.2"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
