--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,9 @@ jobs:
       - run:
           name: Install npm
           command: cd functions && npm install
+      - run:
+          name: install firebase-tools
+          command: npm install -D firebase-tools
       - save_npm
   lint:
     executor:
