--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,9 @@ jobs:
       - checkout
       - restore_npm
       - run:
+          name: Npm install test
+          command: npm install
+      - run:
           name: Run lint
           command: npm run lint
 
