--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,9 @@ jobs:
       - checkout
       - restore_npm
       - run:
+          name: npm install
+          command: cd functions && npm install  
+      - run:
           name: deploy
           command: ./functions/node_modules/.bin/firebase deploy --only functions --token=$FIREBASE_TOKEN
 
