--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,16 @@ commands:
   restore_npm:
     steps:
       - restore_cache:
-          name: Restore npm dependencies
           keys: 
+            - npm-v1-{{ checksum "package-lock.json }}-{{ checksum "./functions/package-lock.json" }}
             - npm-v1-{{ checksum "package-lock.json" }}
-            - npm-v1-
+            - npm-v1
   save_npm:
     steps:
       - save_cache:
           name: Cache npm dependencies
           key: 
-            - npm-v1-{{ checksum "package-lock.json" }}
+            - npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "./functions/package-lock.json" }}
           paths:
             - ~/repo/node_modules
             - ~/repo/functions/node_modules
@@ -38,7 +38,7 @@ jobs:
           name: Install npm dependencies
           command: npm ci
       - run:
-          name: Install npm
+          name: Install functions npm
           command: cd functions && npm ci
       - save_npm
   lint:
