ほぼもとに戻した

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,9 @@ commands:
   restore_npm:
     steps:
       - restore_cache:
+          name: Restore npm caches
           key: 
             - npm-v1-{{ checksum "package-lock.json }}-{{ checksum "./functions/package-lock.json" }}
-            - npm-v1-{{ checksum "package-lock.json" }}
-            - npm-v1
   save_npm:
     steps:
       - save_cache:
