--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,15 +13,15 @@ commands:
   restore_npm:
     steps:
       - restore_cache:
-          name: Restore npm caches
-          key: 
+          keys: 
             - npm-v1-{{ checksum "package-lock.json }}-{{ checksum "./functions/package-lock.json" }}
+            - npm-v1-{{ checksum "package-lock.json" }}
+            - npm-v1
   save_npm:
     steps:
       - save_cache:
           name: Cache npm dependencies
-          key: 
-            - npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "./functions/package-lock.json" }}
+          key: npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "./functions/package-lock.json" }}
           paths:
             - ~/repo/node_modules
             - ~/repo/functions/node_modules
