--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
       - restore_cache:
           name: Restpre npm dependencies
           keys: 
-            - npm-v1-{{ checksum "package-lock.json }}-{{ checksum "functions/package-lock.json" }}
+            - npm-v1-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
             - npm-v1-{{ checksum "package-lock.json" }}
             - npm-v1
   save_npm:
