--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "diff": "^4.0.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "firebase-tools": "^7.0.2"
