--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@nuxtjs/vuetify": "0.5.5",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "firebase-tools": "^7.0.2",
+    "firebase-tools": "^7.1.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -27,9 +27,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-config-standard": ">=12.0.0",
+    "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": ">=2.16.0",
-    "eslint-plugin-jest": ">=22.3.0",
+    "eslint-plugin-jest": "^22.7.2",
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
