--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
@@ -17,8 +18,10 @@
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "0.5.5",
     "cross-env": "^5.2.0",
+    "diff": "^4.0.1",
     "express": "^4.16.4",
     "firebase-tools": "^7.1.0",
+    "jsdiff": "^1.1.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -29,7 +32,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": ">=2.16.0",
-    "eslint-plugin-jest": "^22.7.2",
+    "eslint-plugin-jest": "^22.9.0",
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
