--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/vuetify": "0.5.5",
     "cross-env": "^5.2.0",
+    "csshake": "^1.5.3",
     "diff": "^4.0.1",
     "express": "^4.16.4",
     "firebase-tools": "^7.1.1",
+    "jrumble": "^1.3.0",
     "jsdiff": "^1.1.1",
     "nuxt": "^2.0.0"
   },
