--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,21 @@
 {
-    "editor.tabSize": 2,
-    "path-autocomplete.pathMappings": {
-      "~": "${folder}",
-      "@": "${folder}"
+  "editor.tabSize": 2,
+  "path-autocomplete.pathMappings": {
+    "~": "${folder}",
+    "@": "${folder}"
+  },
+  "eslint.validate": [
+    "javascript",
+    {
+      "language": "vue",
+      "autoFix": true
     },
-    "eslint.validate": [
-      "javascript",
-      {
-        "language": "vue",
-        "autoFix": true
-      }
-    ],
-    "eslint.autoFixOnSave": true,
-    "editor.formatOnSave": false,
-    // https://stackoverflow.com/questions/47834825/in-vs-code-disable-error-comments-are-not-permitted-in-json
-    "files.associations": {
-      ".json": "jsonc"
-    }
+    "vue"
+  ],
+  "eslint.autoFixOnSave": true,
+  "editor.formatOnSave": false,
+  // https://stackoverflow.com/questions/47834825/in-vs-code-disable-error-comments-are-not-permitted-in-json
+  "files.associations": {
+    ".json": "jsonc"
   }
+}
