--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "stylus": "^0.54.5",
