--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "eslint-config-standard": ">=12.0.0",
     "eslint-plugin-import": ">=2.16.0",
     "eslint-plugin-jest": "^22.14.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-node": ">=8.0.1",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^5.2.3",
     "eslint-plugin-standard": ">=4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "firebase-tools": "^7.2.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
