--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,15 @@ commands:
     steps:
       - restore_cache:
           name: Restpre npm dependencies
-          keys: 
-            - npm-v2-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
-            - npm-v2-{{ checksum "package-lock.json" }}
-            - npm-v2
+          keys:
+            - npm-v3-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
+            - npm-v3-{{ checksum "package-lock.json" }}
+            - npm-v3
   save_npm:
     steps:
       - save_cache:
           name: Cache npm dependencies
-          key: npm-v2-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
+          key: npm-v3-{{ checksum "package-lock.json" }}-{{ checksum "functions/package-lock.json" }}
           paths:
             - ~/repo/node_modules
             - ~/repo/functions/node_modules
@@ -59,7 +59,7 @@ jobs:
       - restore_npm
       - run:
           name: generate statics
-          command: npm run generate
+          command: npm run build
       - run:
           name: deploy
           command: ./node_modules/.bin/firebase deploy --only hosting --token=$FIREBASE_TOKEN
